# vdl-tools

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
vdl_tools/: temp_run.py
vdl_tools/LinkedIn/: cache.py  configuration.py
vdl_tools/LinkedIn/handlers/: coresignal_bulk.py  coresignal_query.py
vdl_tools/LinkedIn/utils/: shared.py
vdl_tools/download_process_images/: imagetools.py  test.py  test_df.py
vdl_tools/linkedin/: __init__.py  org_loader.py  profile_loader.py  profile_loader_psql.py
vdl_tools/linkedin/experimental/: search_and_merge_li.py
vdl_tools/linkedin/handlers/: base_handler.py  direct_query.py
vdl_tools/linkedin/processors/: coresignal_processor.py  processor_utils.py  profile_cleaning.py  raw_org_processor.py  raw_profile_processor.py
vdl_tools/linkedin/utils/: linkedin_url.py
vdl_tools/network_tools/: causal_network_metrics.py  network_functions.py  node_similarity.py  optimize_clusters.py  post_build_analysis.py  trophiclevel.py
vdl_tools/notebooks/: few_shot_tutorial.py  scraped_pages_exploration.py
vdl_tools/py2mappr/: README.md  _project_manager.py  map.py  vdl_palette.py
vdl_tools/py2mappr/_attributes/: attr_types.py  utils.py
vdl_tools/py2mappr/_builder/: build_dataset.py  build_network.py  build_settings.py  builder.py
vdl_tools/py2mappr/_core/: config.py  project.py
vdl_tools/scrape_enrich/: __init__.py  combine_crunchbase_candid_linkedin.py  enrich_metadata.py  geocode.py  geocode_cache.py  googletranslate.py  kwd_mapping_functions.py  params.py  prepare_candid.py  prepare_candid_old.py  prepare_crunchbase.py  prepare_crunchbase_csv.py  prepare_crunchbase_old.py  process_images.py  tags_from_text.py
vdl_tools/shared_tools/: README.md  all_source_organization_summarization.py  cache.py  cb_funding_calculations.py  climatebert_adaptation.py  common_dicts.py  common_functions.py  embed_texts_with_cache.py  funding_calcations.py  geotagging_prompting.py  gpt_relevant_for_thinning.py  gpt_relevant_for_thinning_old.py  gtp_relevant_for_corp_accountability.py  openai_ed_relevance.py  process_logos.py  project_config.py  s3_model.py  s3_tools.py  translate.py  tree_to_icicle_chart.py
vdl_tools/tag2network/: RunWOSExample.py  runPlotExample.py
(+161 files in other folders)
